--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Useful starting lines\n",
@@ -25,14 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
-    "DATA_TRAIN_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TRAIN_PATH = 'data/train.csv'\n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
    ]
   },
@@ -52,25 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = 'data/test.csv'\n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = '' # TODO: fill in desired name of output file for submission\n",
+    "OUTPUT_PATH = 'data/output.csv' \n",
     "y_pred = predict_labels(weights, tX_test)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
@@ -78,19 +70,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
+  "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -102,9 +92,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
-  }
+   "version": "3.7.4"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
