Code for checking which columns are useless

--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No problem\n",
+      "No problem\n",
+      "DER_mass_MMC\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "DER_deltaeta_jet_jet\n",
+      "DER_mass_jet_jet\n",
+      "DER_prodeta_jet_jet\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "DER_lep_eta_centrality\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "No problem\n",
+      "PRI_jet_leading_pt\n",
+      "PRI_jet_leading_eta\n",
+      "PRI_jet_leading_phi\n",
+      "PRI_jet_subleading_pt\n",
+      "PRI_jet_subleading_eta\n",
+      "PRI_jet_subleading_phi\n",
+      "No problem\n"
+     ]
+    }
+   ],
+   "source": [
+    "from implementations import *\n",
+    "import pandas as pd\n",
+    "\n",
+    "initial_w = np.random.randint(2, high=4, size=30).T\n",
+    "max_iters = 20\n",
+    "gamma = 0.7\n",
+    "\n",
+    "df1 = pd.read_csv(DATA_TRAIN_PATH)\n",
+    "df2 = pd.read_csv(DATA_TEST_PATH)\n",
+    "for c in df.columns:\n",
+    "    if -999.0 in (df1[c].values) or -999.0 in (df1[c].values):\n",
+    "        print(c)\n",
+    "    else:\n",
+    "        print(\"No problem\")\n",
+    "    \n",
+    "\n",
+    "#standardized_tX, mean, std = standardize(tX)\n",
+    "#weights, loss = least_squares_SGD(y, tX, initial_w, max_iters, gamma)\n",
+    "#print(loss)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
