--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -42,18 +41,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from implementations import *\n",
-    "import pandas as pd\n",
-    "\n",
-    "initial_w = np.random.randint(2, high=4, size=30).T\n",
-    "max_iters = 20\n",
-    "gamma = 0.7\n",
     "\n",
     "# columns with problems : 2 6 7 8 14 25 26 27 28 29 30   (all -2 for tX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 138.47    51.655   97.827 ...    1.24    -2.475  113.497]\n",
+      " [ 160.937   68.768  103.235 ... -999.    -999.      46.226]\n",
+      " [-999.     162.172  125.953 ... -999.    -999.      44.251]\n",
+      " ...\n",
+      " [ 105.457   60.526   75.839 ... -999.    -999.      41.992]\n",
+      " [  94.951   19.362   68.812 ... -999.    -999.       0.   ]\n",
+      " [-999.      72.756   70.831 ... -999.    -999.       0.   ]]\n",
+      "[nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tX_cleaned = remove_wrong_columns(tX)\n",
+    "print(tX_cleaned)\n",
+    "degree = 2\n",
+    "tX_expanded = expand_features_polynomial(tX_cleaned, degree)\n",
+    "max_iters = 1000\n",
+    "initial_w = [0 for i in range(tX_expanded.shape[1])]\n",
+    "gamma = 0.0001\n",
+    "\n",
+    "weights, loss = least_squares_SGD(y, tX_expanded, initial_w, max_iters, gamma)\n",
+    "print(weights)"
    ]
   },
   {
@@ -65,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,12 +106,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "tX_test_cleaned = remove_wrong_columns(tX_test)\n",
+    "tX_test_expanded = expand_features_polynomial(tX_test_cleaned, degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samuel/EPFL/ML/Machine-learning/project1/proj1_helpers.py:30: RuntimeWarning: invalid value encountered in less_equal\n",
+      "  y_pred[np.where(y_pred <= 0)] = -1\n",
+      "/Users/samuel/EPFL/ML/Machine-learning/project1/proj1_helpers.py:31: RuntimeWarning: invalid value encountered in greater\n",
+      "  y_pred[np.where(y_pred > 0)] = 1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "cannot convert float NaN to integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-6699d7b2e856>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mOUTPUT_PATH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'data/output.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtX_test_expanded\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcreate_csv_submission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mids_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mOUTPUT_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/EPFL/ML/Machine-learning/project1/proj1_helpers.py\u001b[0m in \u001b[0;36mcreate_csv_submission\u001b[0;34m(ids, y_pred, name)\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteheader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mr1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr2\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mids\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'Id'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Prediction'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
+     ]
+    }
+   ],
+   "source": [
     "OUTPUT_PATH = 'data/output.csv' \n",
-    "y_pred = predict_labels(weights, tX_test)\n",
+    "y_pred = predict_labels(weights, tX_test_expanded)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
   },
@@ -109,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
