--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,40 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 51.655  97.827  27.98  ... 258.733   2.    113.497]\n",
-      " [ 68.768 103.235  48.146 ... 164.546   1.     46.226]\n",
-      " [162.172 125.953  35.635 ... 260.414   1.     44.251]\n",
-      " ...\n",
-      " [ 60.526  75.839  39.757 ... 198.907   1.     41.992]\n",
-      " [ 19.362  68.812  13.504 ... 112.718   0.      0.   ]\n",
-      " [ 72.756  70.831   7.479 ...  99.405   0.      0.   ]]\n",
-      "[ 0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.          0.          0.          0.          0.\n",
-      "  0.         -0.00310931 -0.00310931 -0.00310931 -0.00310931 -0.00310931\n",
-      " -0.00310931 -0.00310931 -0.00310931 -0.00310931 -0.00310931 -0.00310931\n",
-      " -0.00310931 -0.00310931 -0.00310931 -0.00310931 -0.00310931 -0.00310931\n",
-      " -0.00310931 -0.00310931]\n"
+      "[nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
+      " nan nan nan nan nan nan nan nan nan nan nan nan]\n"
      ]
     }
    ],
    "source": [
-    "tX_cleaned = remove_wrong_columns(tX)\n",
-    "print(tX_cleaned)\n",
+    "tX_cleaned, _, _ = standardize(remove_wrong_columns(tX))\n",
     "degree = 1\n",
     "tX_expanded = expand_features_polynomial(tX_cleaned, degree)\n",
-    "max_iters = 100\n",
-    "initial_w = [0 for i in range(tX_expanded.shape[1])]\n",
-    "gamma = 0.0001\n",
     "\n",
-    "weights, loss = least_squares_SGD(y, tX_expanded, initial_w, max_iters, gamma)\n",
+    "tX_stdrzed, _, _ = standardize(tX)\n",
+    "\n",
+    "max_iters = 50\n",
+    "initial_w = [1. for i in range(tX.shape[1])]\n",
+    "gamma = 0.7\n",
+    "weights, loss = logistic_regression(y, tX, initial_w, max_iters, gamma)\n",
     "print(weights)"
    ]
   },
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,23 +97,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tX_test_cleaned = remove_wrong_columns(tX_test)\n",
+    "tX_test_cleaned, _, _ = standardize(remove_wrong_columns(tX_test))\n",
     "tX_test_expanded = expand_features_polynomial(tX_test_cleaned, degree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "OUTPUT_PATH = 'data/output.csv' \n",
     "y_pred = predict_labels(weights, tX_test_expanded)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-inf"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_loss_sigmoid(y_pred, tX_test_expanded, weights)"
    ]
   },
   {
