--- a/project1/project1.ipynb
+++ b/project1/project1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,15 +61,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 2., 1., 4., 1., 8.],\n",
+       "       [1., 1., 1., 2., 1., 4., 1., 8.],\n",
+       "       [1., 1., 1., 2., 1., 4., 1., 8.]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expand_features_polynomial(np.array([[1,2],[1,2],[1,2]]), 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan\n",
-      " nan nan nan nan nan nan nan nan nan nan nan nan]\n"
+      "[[ 1.          1.          1.         ...  2.87234595 -0.51553048\n",
+      "   0.95579599]\n",
+      " [ 1.          1.          1.         ...  1.62944412 -0.52872659\n",
+      "   0.0680806 ]\n",
+      " [ 1.          1.          1.         ...  2.89452861 -0.52872659\n",
+      "   0.04201829]\n",
+      " ...\n",
+      " [ 1.          1.          1.         ...  2.08287559 -0.52872659\n",
+      "   0.01220828]\n",
+      " [ 1.          1.          1.         ...  0.94551622 -0.54192269\n",
+      "  -0.54192269]\n",
+      " [ 1.          1.          1.         ...  0.76983644 -0.54192269\n",
+      "  -0.54192269]]\n",
+      "[ 0.8007018  -2.92199351 -3.00253163 -2.50158859  6.12385299  4.96308226\n",
+      "  6.13466306 -2.08166537 -2.28694903 -3.66649614 -2.07595131 -2.0466382\n",
+      "  6.1309873  -2.37451567 -2.05474108 -2.05493338 -2.62028369 -2.05457273\n",
+      " -2.05512509 -2.54594389 -2.05436537 -4.25165794 -2.06585248  3.14615146\n",
+      "  3.58303722  3.58307888  5.92990739  6.13231249  6.13211937 -2.78134089]\n"
      ]
     }
    ],
@@ -68,13 +115,13 @@
     "tX_cleaned, _, _ = standardize(remove_wrong_columns(tX))\n",
     "degree = 1\n",
     "tX_expanded = expand_features_polynomial(tX_cleaned, degree)\n",
-    "\n",
     "tX_stdrzed, _, _ = standardize(tX)\n",
     "\n",
-    "max_iters = 50\n",
-    "initial_w = [1. for i in range(tX.shape[1])]\n",
-    "gamma = 0.7\n",
-    "weights, loss = logistic_regression(y, tX, initial_w, max_iters, gamma)\n",
+    "lambda_ = 10000\n",
+    "initial_w = np.array([1. for i in range(tX_stdrzed.shape[1])])\n",
+    "gamma = 0.00001\n",
+    "max_iters = 2000\n",
+    "weights, loss = reg_logistic_regression(y, tX_stdrzed,lambda_, initial_w, max_iters, gamma)\n",
     "print(weights)"
    ]
   },
@@ -87,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,43 +144,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "tX_test_cleaned, _, _ = standardize(remove_wrong_columns(tX_test))\n",
-    "tX_test_expanded = expand_features_polynomial(tX_test_cleaned, degree)"
+    "tX_test_expanded = expand_features_polynomial(tX_test_cleaned, degree)\n",
+    "tX_test_stdrzd, _, _ = standardize(tX_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "OUTPUT_PATH = 'data/output.csv' \n",
-    "y_pred = predict_labels(weights, tX_test_expanded)\n",
+    "y_pred = predict_labels(weights, tX_test_stdrzd)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-inf"
+       "4386.3529581824805"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_loss_sigmoid(y_pred, tX_test_expanded, weights)"
+    "compute_loss(mse, y_pred, tX_test_stdrzd, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Achieve 0.692 with\n",
+    "```python\n",
+    "tX_cleaned, _, _ = standardize(remove_wrong_columns(tX))\n",
+    "degree = 1\n",
+    "tX_expanded = expand_features_polynomial(tX_cleaned, degree)\n",
+    "tX_stdrzed, _, _ = standardize(tX)\n",
+    "\n",
+    "lambda_ = 10000\n",
+    "initial_w = np.array([1. for i in range(tX_stdrzed.shape[1])])\n",
+    "gamma = 0.00001\n",
+    "max_iters = 2000\n",
+    "weights, loss = reg_logistic_regression(y, tX_stdrzed,lambda_, initial_w, max_iters, gamma)\n",
+    "```"
    ]
   },
   {
