Crash with logistic regression

--- a/project1/julie_notebook.ipynb
+++ b/project1/julie_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cross_validation_gammas(function, y, tx, w_initial, max_iters, gammas, k_fold, seed):\n",
+    "def cross_validation_gammas(function, y, tx, initial_w, max_iters, gammas, k_fold, seed):\n",
     "    \"\"\"Do cross-validation to find the best gamma to use on a given function\"\"\"\n",
     "    # split data in k fold\n",
     "    k_indices = build_k_indices(y, k_fold, seed)\n",
@@ -79,60 +79,83 @@
     "        for k in range(k_fold):\n",
     "            # divide the data into training set and testing set depending on k\n",
     "            tr_indice = k_indices[~(np.arange(k_indices.shape[0]) == k)].reshape(-1)\n",
-    "            test_x = x[k_indices[k]]\n",
+    "            test_tx = tx[k_indices[k]]\n",
     "            test_y = y[k_indices[k]]\n",
-    "            train_x = x[tr_indice]\n",
+    "            train_tx = tx[tr_indice]\n",
     "            train_y = y[tr_indice]\n",
     "            \n",
     "            #Train the set and computes the losses\n",
+    "            print(\"HERE \" + str(k))\n",
     "            weights, loss_tr = function(train_y, train_tx, initial_w, max_iters, gamma)\n",
-    "            loss_te = compute_mse(test_y, test_tx, weights)\n",
+    "            loss_te = compute_loss(mse, test_y, test_tx, weights)\n",
     "            tr_tmp.append(loss_tr)\n",
     "            te_tmp.append(loss_te)\n",
     "        mse_tr.append((gamma, np.mean(tr_tmp)))\n",
     "        mse_te.append((gamma, np.mean(te_tmp)))\n",
+    "        print(mse_tr)\n",
     "        \n",
     "    return mse_tr, mse_te"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_w = np.array([1. for i in range(tX_stdrzed.shape[1])])\n",
     "max_iters = 100\n",
-    "gammas = ???\n",
     "k_fold = 5\n",
     "seed = 42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cross_validation_gamma' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-ea79ba41959d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#least_squares_GD cross-validation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmse_tr_least_squares_GD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmse_te_least_squares_GD\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mcross_validation_gamma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleast_squares_GD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_initial\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgammas\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk_fold\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#logistic_regression cross-validation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cross_validation_gamma' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.001, 45.814939252517206), (0.01, 1.1570884690125212), (0.02, 0.802651741227361), (0.03, 0.7130170152799978), (0.04, 0.6492072148687056), (0.05, 0.6014476285437074), (0.06, 0.5651926606470817), (0.07, 0.5373073137667168), (0.08, 0.515557037124372), (0.09, 274914664.57558066), (0.1, 1.2574604422153355e+25), (0.1, 1.2574604422153355e+25)]\n",
+      "[(0.001, 45.48981802585414), (0.01, 1.1447516640538447), (0.02, 0.8004034428530963), (0.03, 0.7108303616686046), (0.04, 0.6470503297717095), (0.05, 0.5994189809913735), (0.06, 0.5633369443500535), (0.07, 0.5356344443945169), (0.08, 0.5140580666639419), (0.09, 321863003.0029902), (0.1, 2.1689801028412247e+25), (0.1, 2.1689801028412247e+25)]\n"
      ]
     }
    ],
    "source": [
     "#least_squares_GD cross-validation\n",
+    "initial_w = np.array([1.5 for i in range(tX_stdrzed.shape[1])]) \n",
+    "# ATTENTION !!!! 1. return nan pour loss avec least_squares_gd !!!\n",
+    "gammas = np.array([0.001, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1])\n",
     "mse_tr_least_squares_GD, mse_te_least_squares_GD = \\\n",
-    "    cross_validation_gammas(least_squares_GD, y, tx, w_initial, max_iters, gammas, k_fold, seed)\n",
+    "    cross_validation_gammas(least_squares_GD, y, tX_stdrzed, initial_w, max_iters, gammas, k_fold, seed)\n",
     "\n",
+    "print(mse_tr_least_squares_GD)\n",
+    "print(mse_te_least_squares_GD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HERE 0\n"
+     ]
+    }
+   ],
+   "source": [
     "#logistic_regression cross-validation\n",
+    "initial_w = np.zeros((tX_stdrzed.shape[1], 1))\n",
+    "gammas = np.array([0.001, 0.01, 0.1])\n",
     "mse_tr_logistic_regression, mse_te_logistic_regression = \\\n",
-    "cross_validation_gammas(logistic_regression, y, tx, w_initial, max_iters, gammas, k_fold, seed)"
+    "cross_validation_gammas(logistic_regression, y, tX_stdrzed, initial_w, max_iters, gammas, k_fold, seed)\n",
+    "\n",
+    "print(mse_tr_logistic_regression)\n",
+    "print(mse_te_logistic_regression)"
    ]
   },
   {
