--- a/project1/sam-notebook.ipynb
+++ b/project1/sam-notebook.ipynb
@@ -397,33 +397,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Change lambdas and gammas seeing this result to reduce computation time\n",
+    "before best was \n",
+    "gamma =  1e-06  lambda =  100\n",
+    "At iteration 6000, loss = 0.5555634390152187"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gamma =  1e-06  lambda =  100\n",
-      "At iteration 0, loss = 0.5570391434507874\n",
-      "At iteration 1000, loss = 0.55624586649447\n",
-      "At iteration 2000, loss = 0.5558813685185672\n",
-      "At iteration 3000, loss = 0.555709338725023\n",
-      "At iteration 4000, loss = 0.5556260152222255\n",
-      "At iteration 5000, loss = 0.5555845888231217\n",
-      "At iteration 6000, loss = 0.5555634390152187\n"
+      "gammas =  [1.e-06 1.e-07]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Global variables\n",
+    "max_iters = 3000\n",
+    "k_fold = 3\n",
+    "seed = 142\n",
+    "lambdas_ = np.array([1, 10, 100, 1000])\n",
+    "gammas = np.array([10**(-i) for i in range(6,8)])\n",
+    "print(\"gammas = \", gammas)\n",
+    "w_initial = np.array([0.0 for i in range(tX.shape[1])])\n",
+    "tX_standardized, tr_mean, tr_std = standardize(tX)\n",
+    "\n",
+    "#to work with loss\n",
+    "y = np.array([int((y[i] + 1)/2) for i in range(len(y))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At iteration 0, loss = 0.6931471805599424\n",
+      "At iteration 1000, loss = 0.5684430043539948\n",
+      "At iteration 2000, loss = 0.5583692247724278\n",
+      "At iteration 0, loss = 0.5511264311615018\n",
+      "At iteration 1000, loss = 0.5460653088954509\n",
+      "At iteration 2000, loss = 0.5422474944368155\n",
+      "At iteration 0, loss = 0.5394698316506356\n",
+      "At iteration 1000, loss = 0.5371208207547129\n",
+      "At iteration 2000, loss = 0.5352654732448939\n",
+      "0.5414543076955408\n",
+      "45091.577688956146\n",
+      "At iteration 0, loss = 0.5370512202125811\n",
+      "At iteration 1000, loss = 0.5364209571518908\n",
+      "At iteration 2000, loss = 0.5359194013519164\n",
+      "At iteration 0, loss = 0.5357680009964346\n",
+      "At iteration 1000, loss = 0.5354509790411728\n",
+      "At iteration 2000, loss = 0.5351932177944126\n",
+      "At iteration 0, loss = 0.5350665959556371\n",
+      "At iteration 1000, loss = 0.534877907388126\n",
+      "At iteration 2000, loss = 0.5347233412289472\n",
+      "0.5350280068978794\n",
+      "44142.23929225857\n",
+      "At iteration 0, loss = 0.5866304758119318\n",
+      "At iteration 1000, loss = 0.574730786235232\n",
+      "At iteration 2000, loss = 0.5684202081603393\n",
+      "At iteration 0, loss = 0.5651287933612793\n",
+      "At iteration 1000, loss = 0.5632774313471997\n",
+      "At iteration 2000, loss = 0.5622962789955954\n",
+      "At iteration 0, loss = 0.561978578972674\n",
+      "At iteration 1000, loss = 0.5616957254329297\n",
+      "At iteration 2000, loss = 0.5615433122178519\n",
+      "0.5627696839663471\n",
+      "45206.79040552307\n",
+      "At iteration 0, loss = 0.7013432344789441\n",
+      "At iteration 1000, loss = 0.5898339010894509\n",
+      "At iteration 2000, loss = 0.5883980665868284\n",
+      "At iteration 0, loss = 0.5878706328093243\n",
+      "At iteration 0, loss = 0.5882176202214217\n",
+      "0.5881522672408991\n",
+      "48151.174581485444\n",
+      "At iteration 0, loss = 0.5781013986914636\n",
+      "At iteration 1000, loss = 0.5751928187416517\n",
+      "At iteration 2000, loss = 0.5732137295266682\n",
+      "At iteration 0, loss = 0.5711065322549079\n",
+      "At iteration 1000, loss = 0.5696994079172696\n",
+      "At iteration 2000, loss = 0.568408863067738\n",
+      "At iteration 0, loss = 0.5675392206767453\n",
+      "At iteration 1000, loss = 0.5663784170023537\n",
+      "At iteration 2000, loss = 0.5652761056856023\n",
+      "0.5676675770989607\n",
+      "47299.63229514132\n",
+      "At iteration 0, loss = 0.5646107452923562\n",
+      "At iteration 1000, loss = 0.5636325570785344\n",
+      "At iteration 2000, loss = 0.5626984323269585\n",
+      "At iteration 0, loss = 0.5614995418429929\n",
+      "At iteration 1000, loss = 0.5606636124136273\n",
+      "At iteration 2000, loss = 0.5598624825534152\n",
+      "At iteration 0, loss = 0.5593891988653916\n",
+      "At iteration 1000, loss = 0.5586335062109851\n",
+      "At iteration 2000, loss = 0.5579095886888801\n",
+      "0.5593694671501261\n",
+      "46561.75119352859\n",
+      "At iteration 0, loss = 0.5636731329973643\n",
+      "At iteration 1000, loss = 0.5634899568134148\n",
+      "At iteration 2000, loss = 0.5633331198260721\n",
+      "At iteration 0, loss = 0.5629794580928594\n",
+      "At iteration 1000, loss = 0.562852757579079\n",
+      "At iteration 2000, loss = 0.5627389637020143\n",
+      "At iteration 0, loss = 0.5628979536073923\n",
+      "At iteration 1000, loss = 0.5627916902690071\n",
+      "At iteration 2000, loss = 0.5626969017670104\n",
+      "0.5628114022181784\n",
+      "46218.92016923975\n",
+      "At iteration 0, loss = 0.6404190075313767\n",
+      "At iteration 1000, loss = 0.6209394269409043\n",
+      "At iteration 2000, loss = 0.6090932848730942\n",
+      "At iteration 0, loss = 0.601320317075298\n",
+      "At iteration 1000, loss = 0.596515372404462\n",
+      "At iteration 2000, loss = 0.5934391048182723\n",
+      "At iteration 0, loss = 0.5917743226788691\n",
+      "At iteration 1000, loss = 0.5905090672112355\n",
+      "At iteration 2000, loss = 0.5896956210086127\n",
+      "0.5940966313989348\n",
+      "47525.07009379773\n"
+     ]
+    }
+   ],
+   "source": [
+    "tr_losses, te_losses, gamma, lambda_ = cross_validation_reg_log_regr(y, tX_standardized, w_initial, max_iters, gammas, lambdas_, k_fold, seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma =  1e-06  lambda =  10\n",
+      "At iteration 0, loss = 0.5328341757248475\n",
+      "At iteration 1000, loss = 0.532452677185637\n",
+      "At iteration 2000, loss = 0.5321516183711678\n",
+      "At iteration 3000, loss = 0.531909762256691\n",
+      "At iteration 4000, loss = 0.5317122514246776\n",
+      "At iteration 5000, loss = 0.5315485407960628\n",
+      "At iteration 6000, loss = 0.5314110377112972\n",
+      "At iteration 7000, loss = 0.5312941953740249\n",
+      "At iteration 8000, loss = 0.5311939013393535\n",
+      "At iteration 9000, loss = 0.5311070605521278\n",
+      "At iteration 10000, loss = 0.531031308152806\n",
+      "At iteration 11000, loss = 0.5309648097321319\n",
+      "At iteration 12000, loss = 0.5309061210691471\n",
+      "At iteration 13000, loss = 0.5308540886833469\n",
+      "At iteration 14000, loss = 0.5308077786240801\n",
+      "At iteration 15000, loss = 0.5307664249543416\n",
+      "At iteration 16000, loss = 0.5307293920817708\n",
+      "At iteration 17000, loss = 0.5306961469057752\n",
+      "At iteration 18000, loss = 0.5306662379823048\n",
+      "At iteration 19000, loss = 0.5306392797501206\n",
+      "At iteration 20000, loss = 0.53061494044167\n",
+      "At iteration 21000, loss = 0.5305929327025244\n",
+      "At iteration 22000, loss = 0.5305730062223469\n",
+      "At iteration 23000, loss = 0.5305549418757505\n",
+      "At iteration 24000, loss = 0.5305385470090548\n",
+      "At iteration 25000, loss = 0.5305236516065505\n",
+      "At iteration 26000, loss = 0.530510105139514\n",
+      "At iteration 27000, loss = 0.5304977739512655\n",
+      "At iteration 28000, loss = 0.5304865390677854\n"
      ]
     }
    ],
    "source": [
     "print(\"gamma = \", gamma, \" lambda = \", lambda_)\n",
-    "w, loss = reg_logistic_regression(y, tX_standardized, lambda_, w_initial, 8000, gamma)"
+    "w, loss = reg_logistic_regression(y, tX_standardized, lambda_, w_initial, 30000, gamma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
