add md to tell HP

--- a/project1/sam-notebook.ipynb
+++ b/project1/sam-notebook.ipynb
@@ -582,6 +582,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Best with regularized logistic regression\n",
+    "0.737\n",
+    "\n",
+    "gamma =  1e-06  lambda =  10\n",
+    "At iteration 28000, loss = 0.5304865390677854"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {},
